# cwhy

./: README.md  apply-diff.py  pyproject.toml
.github/workflows/: regression-check.yml  regression-generate.yml  regression.yml  release.yml  sanity.yml  tests.yml
mutations/: CMakeLists.txt  README.md
mutations/src/: main.cpp
src/c-why/: __main__.py  c-why.py
src/cwhy/: __main__.py  clangd_lsp_integration.py  cwhy.py  explain.py  functions.py  git_integration.py  print_debug.py  prompts.py  wrapper.py.in
src/cwhy/conversation/: __init__.py  diff_functions.py  explain_functions.py  functions.py  utils.py
test/: test_coverup_openai_1.py  test_coverup_openai_10.py  test_coverup_openai_11.py  test_coverup_openai_12.py  test_coverup_openai_13.py  test_coverup_openai_14.py  test_coverup_openai_15.py  test_coverup_openai_16.py  test_coverup_openai_17.py  test_coverup_openai_18.py  test_coverup_openai_19.py  test_coverup_openai_2.py  test_coverup_openai_20.py  test_coverup_openai_3.py  test_coverup_openai_4.py  test_coverup_openai_5.py  test_coverup_openai_6.py  test_coverup_openai_7.py  test_coverup_openai_8.py  test_coverup_openai_9.py  testme.rs
test/Haskell/: testme-fixed.hs
test/c++/: missing-argument.cpp  missing-hash.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-transform-missing-argument.cpp  redeclared-function.cpp  sfinae-trailing-return-type.cpp
tests/: .gitignore  anonymizer.py  apply_diff.py  manifest.yml  prepare.py  regression.py  runner-diff.py  runner.py
tests/.regression/macos/clang++/: ctre-test.cpp  include-header-typo.cpp  missing-hash.cpp  missing-ostream-operator.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-bind-const-ref-to-non-const-ref.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redeclared-function.cpp  redeclared-variable-deduction-order.cpp  redefined-function.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  sfinae-trailing-return-type.cpp  template-recursion.cpp
tests/.regression/ubuntu/clang++/: ctre-test.cpp  include-header-typo.cpp  missing-hash.cpp  missing-ostream-operator.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-bind-const-ref-to-non-const-ref.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redeclared-function.cpp  redeclared-variable-deduction-order.cpp  redefined-function.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  sfinae-trailing-return-type.cpp  template-recursion.cpp
tests/.regression/ubuntu/clang++-17/: missing-hash.cpp  missing-ostream-operator.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redeclared-function.cpp  redeclared-variable-deduction-order.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  template-recursion.cpp
tests/.regression/ubuntu/g++/: ctre-test.cpp  include-header-typo.cpp  missing-hash.cpp  missing-ostream-operator.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-bind-const-ref-to-non-const-ref.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redeclared-function.cpp  redeclared-variable-deduction-order.cpp  redefined-function.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  sfinae-trailing-return-type.cpp  template-recursion.cpp
tests/.regression/ubuntu/g++-10/: missing-hash.cpp  missing-ostream-operator.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redefined-function.cpp  reverse-iterator.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  sfinae-trailing-return-type.cpp
tests/.regression/ubuntu/g++-11/: missing-hash.cpp  missing-ostream-operator.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  reverse-iterator.cpp
tests/.regression/ubuntu/g++-12/: missing-ostream-operator.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-bind-const-ref-to-non-const-ref.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  reverse-iterator.cpp  sfinae-trailing-return-type.cpp  template-recursion.cpp
tests/.regression/ubuntu/g++-9/: missing-hash.cpp  missing-ostream-operator.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp
tests/Haskell/: README.md  testme.hs
tests/c#/: testme.cs  testme.cs.out
tests/c++/: const-generator.cpp  cpp20-feature.cpp  ctre-test.cpp  include-header-typo.cpp  manifest.yml  missing-hash.cpp  missing-ostream-operator.cpp  missing-struct-semicolon.cpp  overload-resolution-failure-bind-const-ref-to-non-const-ref.cpp  overload-resolution-failure-transform-missing-argument.cpp  push-back-pointer.cpp  redeclared-function.cpp  redeclared-variable-deduction-order.cpp  redefined-function.cpp  reverse-iterator.cpp  sfinae-ambiguous.cpp  sfinae-trailing-return-type-conditional-noexcept.cpp  sfinae-trailing-return-type.cpp  template-recursion.cpp
tests/go/: testme.go  testme.go.out
tests/kotlin/: README.md  testme.kt
tests/php/: testme.php
tests/python/: concatenate-str-to-int.py
tests/ruby/: testme.rb
tests/swift/: README.md  testme.swift
