[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cwhy"
version = "0.3.2"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
  { name="Bryce Adelstein Lelbach", email="brycelelbach@gmail.com" }
]
dependencies = ["openai==0.28.1", "llm_utils==0.2"]
description = "Explains and proposes fixes for compile-time errors for many programming languages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cwhy = "cwhy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/plasma-umass/cwhy"
"Bug Tracker" = "https://github.com/plasma-umass/cwhy/issues"
