[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwhy"
version = "0.4.5"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
  { name="Bryce Adelstein Lelbach", email="brycelelbach@gmail.com" }
]

dependencies = [
  "openai>=1.3.6",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "litellm>=1.22.3",
  "llm-utils>=0.2.6",
  "boto3>=1.34.35",
]
description = "Explains and proposes fixes for compile-time errors for many programming languages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.scripts]
cwhy = "cwhy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/plasma-umass/cwhy"
"Bug Tracker" = "https://github.com/plasma-umass/cwhy/issues"

[project.optional-dependencies]
dev = ["types-PyYAML>=6.0.1"]
