[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwhy"
version = "0.6"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
]

dependencies = [
  "openai>=1.84.0",
  "rich>=13.7.1",
  "llm-utils>=0.2.8",
]
description = "Explains and proposes fixes for compile-time errors for many programming languages."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.scripts]
cwhy = "cwhy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/plasma-umass/cwhy"
"Bug Tracker" = "https://github.com/plasma-umass/cwhy/issues"
